# ce-stresstest

./: .gitignore  CLAUDE.md  README.md  check.sh  pyproject.toml  run_stress_test.py
examples/configs/: baseline_test.yaml  high_load_test.yaml  scaling_test.yaml
examples/workloads/: baseline_test.cpp  boost_heavy.cpp  cpu_intensive.cpp  cuda_advanced.cu  cuda_simple.cu  error_syntax.cpp  error_template.cpp  fmt_test.cpp  io_intensive.cpp  memory_heavy.cpp  minimal.cpp  msvc_simple.cpp  msvc_windows.cpp  simple.cpp
src/: api_client.py  framework.py  load_patterns.py  metrics.py  reporting.py  scenarios.py
