[tool.poetry]
name = "ce-compilation-worker-stresstest"
version = "0.1.0"
description = "Comprehensive stress testing framework for Compiler Explorer's compilation workers"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.0"
asyncio-throttle = "^1.0.2"
pandas = "^1.5.0"
matplotlib = "^3.6.0"
seaborn = "^0.12.0"
rich = "^12.6.0"
pyyaml = "^6.0"
click = "^8.0.0"
numpy = "^1.24.0"
aiofiles = "^22.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-asyncio = "^0.21.0"
black = "^23.0.0"
flake8 = "^6.0.0"
mypy = "^1.0.0"
ruff = "^0.12.5"
pandas-stubs = "^2.3.0.250703"
types-seaborn = "^0.13.2.20250728"

[tool.poetry.scripts]
stress-test = "src.run_stress_test:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true